<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.CadastroActivity">

    <TextView
        android:id="@+id/activity_cadastro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_criar_conta"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cadastro_editText_name"/>

    <EditText
        android:id="@+id/cadastro_editText_name"
        android:layout_width="250dp"
        android:layout_height="44dp"
        android:ems="10"
        android:drawableLeft="@drawable/ic_person_grey_24dp"
        android:hint="@string/activity_cadastro_nome"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@id/cadastro_editText_email"
        app:layout_constraintTop_toBottomOf="@id/activity_cadastro_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cadastro_editText_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableLeft="@drawable/ic_email_grey_24dp"
        android:hint="@string/activity_cadastro_email"
        android:inputType="textEmailSubject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastro_editText_name"

        app:layout_constraintBottom_toTopOf="@id/cadastro_editText_password"/>

    <EditText
        android:id="@+id/cadastro_editText_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawableLeft="@drawable/ic_lock_grey_24dp"
        android:hint="@string/activity_cadastro_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastro_editText_email"
        app:layout_constraintBottom_toTopOf="@id/activity_cadastro_button"/>

    <Button
        android:id="@+id/activity_cadastro_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:padding="20dp"
        android:textSize="18sp"
        android:text="@string/text_cadastra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastro_editText_password"
        app:layout_constraintBottom_toBottomOf="parent"/>


</android.support.constraint.ConstraintLayout>